--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
             <div class="row mb-3">
                 <label for="title" class="col-sm-2 col-form-label">Título</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="title" required>
+                    <input type="text" class="form-control" id="title">
                 </div> 
             </div>
             <div class="row mb-3">
                 <label for="author" class="col-sm-2 col-form-label">Autor</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="author" required>
+                    <input type="text" class="form-control" id="author">
                 </div>
             </div>
             <div class="row mb-3">
                 <label for="publicationYear" class="col-sm-2 col-form-label">Año de publicación</label>
                 <div class="col-sm-10">
-                    <input type="number" class="form-control" id="publicationYear" required>
+                    <input type="number" class="form-control" id="publicationYear">
                 </div>
             </div>
             <fieldset class="row mb-3">
